--- a/src/main/resources/templates/question-statistic.html
+++ b/src/main/resources/templates/question-statistic.html
@@ -19,14 +19,14 @@
     /*]]>*/
 </script>
 <script type="text/javascript" th:src="@{/js/questionScript.js}"></script>
-<div >
-    <div class="row col-md-8 offset-2" style="padding-top: 5%">
-        <div id="chartContainer"  style="height: 600px; width: 100%;"></div>
+<div>
+    <div class="row col-md-8 offset-2" style="padding-top: 7%">
+        <div id="chartContainer"  style="height: 550px; width: 100%;"></div>
     </div>
 
     <div class="row col-md-12">
-        <a th:href="@{${referer}}">
-            <button type="button" class="btn btn-primary">Back</button>
+        <a th:href="@{${referer}}" class="col-md-4 offset-4">
+            <button type="button" class="btn back"></button>
         </a>
     </div>
 </div>
