--- a/src/main/resources/templates/question-form.html
+++ b/src/main/resources/templates/question-form.html
@@ -93,7 +93,7 @@
 <body class="bg">
 <th:block th:replace="fragments :: navigator" th:remove="tag"/>
 <div class="container" style="margin-top: 7%">
-    <h1 class="display-3 animated fadeInDown slow" style="color: #966364;">QUESTION <span
+    <h1 th:class="${errorMessage == null ? 'display-3 animated fadeInDown slow':'display-3'}" style="color: #966364;">QUESTION <span
             th:text="${data.getCounter()-1}"></span>/<span
             th:text="${data.getQuestionnaireQuestionIdTab().length}"></span></h1>
     <div th:if="${errorMessage != null}" class="row col-md-12 form-input-row">
@@ -101,7 +101,8 @@
              th:text="${errorMessage}"></div>
     </div>
     <!--<form th:action="@{'/public/answer/'+${data.getQuestionnarieId()}+'/'+${data.getAnonymousUserId()}}" method="post" th:object="${data}">-->
-    <form class="z-depth-5 rounded animated fadeInDown" th:action="@{/public/answer}" method="post" th:object="${data}"
+    <form th:class="${errorMessage == null ? 'z-depth-5 rounded animated fadeInDown':'z-depth-5 rounded '}"
+          th:action="@{/public/answer}" method="post" th:object="${data}"
           style="background-color: #966364">
         <input type="hidden" th:field="*{questionnarieId}" th:value="*{questionnarieId}">
         <input type="hidden" th:field="*{anonymousUserId}" th:value="*{anonymousUserId}">
@@ -122,11 +123,12 @@
                            th:field="*{answerId}"
                            th:value="${answer.getId()}"
                            checked="checked">
-                    <label class="animated zoomInRight slower" th:for="${'f-option'+answer.getId()}"
+                    <label th:class="${errorMessage == null ? 'animated zoomInRight slower':''}"
+                           th:for="${'f-option'+answer.getId()}"
                            th:text="${answer.getContent()}">
 
                     </label>
-                    <div class="check animated fadeInLeft slower delay-1s"></div>
+                    <div th:class="${errorMessage == null ? 'check animated fadeInLeft slower delay-1s':'check '}"></div>
                 </li>
             </ul>
 
